--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-canvas": "^0.1.40",
-    "react-native-webview": "^13.10.4"
+    "react-native-webview": "^13.10.4",
+    "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,6 +27,7 @@
     "@types/react": "^18.2.6",
     "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/spark-md5": "^3.0.4",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
