--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-canvas": "^0.1.40",
+    "react-native-image-picker": "^7.1.2",
     "react-native-webview": "^13.10.4",
     "spark-md5": "^3.0.2"
   },
