--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-canvas": "^0.1.40",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
-    "react-native-webview": "^13.10.4",
-    "spark-md5": "^3.0.2"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-webview": "^13.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,10 +27,11 @@
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.6",
     "@types/react-native-canvas": "^0.1.13",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/spark-md5": "^3.0.4",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
