--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
@@ -17,7 +18,9 @@
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-webview": "^13.10.4"
+    "react-native-webview": "^13.10.4",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
